portfolio-details.html

--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -135,7 +135,7 @@
 
           <div class="col-lg-4" data-aos="fade-left">
             <div class="portfolio-info">
-              <h3>Project information</h3>
+              <h3>Arts information</h3>
               <ul>
                 <li><strong>Category</strong>: Arts</li>
                 <li><strong>Media</strong>: Photoshop/Paint Tool Sai</li>
@@ -144,9 +144,9 @@
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-left">
-              <h2>This is an example of portfolio detail</h2>
+              <h2>These are my recent art commissions.</h2>
               <p>
-                This artwork is a testament to craftsmanship and dedication, skillfully portraying a range of emotions. Meticulously executed with an acute focus on detail. It weaves intellectual concepts into a visual appealing masterpiece. Exploring this creation reveals the depth and narrative intricacies, emphasizing that art is not merely visual; it's a conduit for emotions and ideas.
+                These artworks are testaments to craftsmanship and dedication, skillfully portraying a range of emotions. Meticulously executed with an acute focus on detail. It weaves intellectual concepts into a visual appealing masterpiece. Exploring this creation reveals the depth and narrative intricacies, emphasizing that art is not merely visual; it's a conduit for emotions and ideas.
               </p>
             </div>
           </div>
