--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Johnson Javier</h4>
-              <p><em>An aspiring professional with a unique blend of technical and creative skills. Currently pursuing a BSIT degree, with a passion for art and programming. Eager to apply expertise in both domains to create innovative solutions. Open to new challenges and collaborations.</em></p>
+              <p><em>An aspiring professional with a unique blend of technical and creative skills. A BSIT graduate from Caraga State University, passionate about both art and programming. Eager to apply and expand my expertise across these domains to develop innovative solutions. Open to new challenges, continuous learning, and meaningful collaborations.</em></p>
               <ul>
                 <li>P-8 Sitio Quarry, Aupagan, Butuan CityL</li>
                 <li>+63975 269 7120</li>
@@ -208,9 +208,9 @@
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>BACHELOR OF SCIENCE IN INFORMATION TECHNOLOGY</h4>
-              <h5>2022 - Present</h5>
+              <h5>2022 - 2025</h5>
               <p><em>Caraga State University, Butuan City</em></p>
-              <p>Studying diligently while embracing the challenges and opportunities of a BSIT program at Caraga State University. Committed to mastering the intersection of technology, art, and programming for innovative solutions.</p>
+              <p>A proud BSIT graduate from Caraga State University, with a strong foundation built through diligent study and a deep commitment to embracing both challenges and opportunities. Passionate about the intersection of technology, art, and programming—dedicated to creating innovative and impactful solutions.</p>
             </div>
             
           </div>
@@ -345,6 +345,67 @@
               </div>
             </div>
           </div>
+_____
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-10.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-10.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title=" "><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-11.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-11.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title=" "><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-12.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-12.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title=" "><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-13.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-13.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title=" "><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-14.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-14.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title=" "><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-15.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-15.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title=" "><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+          
 
         </div>
 
