--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               </div>
             </div>
             <p>
-              Currently pursuing a BSIT degree, I am on a continuous journey of learning and growth. My skills in art and programming converge to create impactful and meaningful experiences. I thrive on challenges and am open to collaborations. Let's work together to turn ideas into reality and bring innovation to life. </p>
+              As a BSIT graduate, I continue on a journey of learning and growth. With a strong foundation in both art and programming, I strive to create impactful and meaningful digital experiences. I thrive on challenges and welcome opportunities for collaboration. Let’s work together to turn ideas into reality and bring innovation to life.</p>
           </div>
         </div>
 
