--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I'm Johnson Javier, a BSIT student, artist, and programmer. I merge technology with creativity to craft innovative solutions.</p>
+          <p>I'm Johnson Javier, a BSIT graduate, artist, and programmer. I merge technology with creativity to craft innovative solutions.</p>
         </div>
 
         <div class="row">
@@ -189,7 +189,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>BSIT student, artist, and programmer. Proficient in multimedia, arts and programming. Committed to learning and creative problem-solving.</p>
+          <p>BSIT graduate, artist, and programmer. Proficient in multimedia, arts and programming. Committed to learning and creative problem-solving.</p>
         </div>
 
         <div class="row">
@@ -345,7 +345,7 @@
               </div>
             </div>
           </div>
-_____
+          
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-10.jpg" class="img-fluid" alt="">
