--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -126,6 +126,30 @@
                   <img src="assets/img/portfolio/portfolio-details-9.jpg" alt="">
                 </div>
 
+                   <div class="swiper-slide">
+                  <img src="assets/img/portfolio/portfolio-details-10.jpg" alt="">
+                </div>
+
+                   <div class="swiper-slide">
+                  <img src="assets/img/portfolio/portfolio-details-11.jpg" alt="">
+                </div>
+
+                   <div class="swiper-slide">
+                  <img src="assets/img/portfolio/portfolio-details-12.jpg" alt="">
+                </div>
+
+                   <div class="swiper-slide">
+                  <img src="assets/img/portfolio/portfolio-details-13.jpg" alt="">
+                </div>
+
+                   <div class="swiper-slide">
+                  <img src="assets/img/portfolio/portfolio-details-14.jpg" alt="">
+                </div>
+
+                   <div class="swiper-slide">
+                  <img src="assets/img/portfolio/portfolio-details-15.jpg" alt="">
+                </div>
+
               </div>
               <div class="swiper-pagination"></div>
             </div>
