--- a/index.html
+++ b/index.html
@@ -448,6 +448,16 @@
 
            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-20.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-20.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title=" "><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-21.png" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-21.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title=" "><i class="bx bx-plus"></i></a>
