--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/profile2.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Johnson Javier</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.facebook.com/sgtjavier" class="facebook"><i class="bx bxl-facebook"></i></a>
