--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>29</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor of Science in Information Technology</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>johnson.javier@carsu.edu.ph</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>sgtjavier.jj@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
