--- a/index.html
+++ b/index.html
@@ -468,9 +468,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-22.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-22.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-22.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title=" "><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-22.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title=" "><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -478,9 +478,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-23.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-23.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-23.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title=" "><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-23.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title=" "><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
