--- a/index.html
+++ b/index.html
@@ -486,6 +486,15 @@
             </div>
           </div>
 
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-24.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-24.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title=" "><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
           
 
         </div>
